phone image, footer, aside block built and banner added

--- a/index.html
+++ b/index.html
@@ -2,34 +2,39 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/style.css" href="normalize.css">
-	<link rel="stylesheet" type="text/style.css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<!---just to note understanding: abbrev. title text from tab of image-->
 	<title>ZjyF...</title>
 </head>
 <body>
-<!--Create top and bottom background sections-->
-<section class = "top"> hi!
-</section>
-<section class = "bottom">hi!
-</section>
+	<div class = "container">
+	<!--Create top and bottom background sections-->
+		<section class = "top"> hi!</section>
 
-<img class = "phones" src = "images/phones.png" alt = "iphone & Android">
+		<section class = "bottom">hi!</section>
 
+		<img class = "phones" src = "images/phones.png" alt = "iphone & Android">
+
+		<aside class = "rightBlock">
+		<img src= "images/brand.png" alt= "Instagram banner">
+			
+		</aside>
+
+	</div>
 
 </body>
 <footer>
-	<div class = "infolinks">
-		<a href = "#"></a>
-		<a href = "#"></a>
-		<a href = "#"></a>
-		<a href = "#"></a>
-		<a href = "#"></a>
-		<a href = "#"></a>
-		<a href = "#"></a>
-		<a href = "#"></a>
+	<div class = "infoLinks">
+	<a href = "#">ABOUT US</a>
+	<a href = "#">SUPPORT</a>
+	<a href = "#">BLOG</a>
+	<a href = "#">PRESS</a>
+	<a href = "#">API</a>
+	<a href = "#">JOBS</a>
+	<a href = "#">PRIVACY</a>
+	<a href = "#">TERMS</a>
+	<p id= "copyTag">&copy; INSTAGRAM</p>
 	</div>
-	<p id= "copytag">&copy; INSTAGRAM</p>
-	
 </footer>
 </html>
