--- a/index.html
+++ b/index.html
@@ -13,14 +13,23 @@
 		<section class = "top"> hi!</section>
 
 		<section class = "bottom">hi!</section>
-
+	<div class= "main">
 		<img class = "phones" src = "images/phones.png" alt = "iphone & Android">
 
-		<aside class = "rightBlock">
-		<img src= "images/brand.png" alt= "Instagram banner">
+		<div class = "rightBlock">
+		<img class = "banner" src= "images/brand.png" alt= "Instagram banner">
+		<button id = "logIn"><img src="images/home.png" alt = hm>Log in</button>
+		<div class = "whiteBox">
+			<h1>Capture and Share the World's Moments</h1>
+			<h3>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your 	life with friends and family<br><br>Mixtape kale chips photo booth iPhone, retro portland butcher pork belly knausgaard meditation bitters. Kale chips raclette organic, art party viral raw denim unicorn schlitz polaroid literally fap street art. Cray tbh keffiyeh, sartorial forage viral occupy vexillologist. Tumeric williamsburg occupy, authentic shabby chic locavore unicorn food truck.<br><br>Photo booth schlitz you probably haven't heard of them beard quinoa cornhole.</h3>
+			<div class="appleGoogle">
+			<img id = "iphone" src="images/badge-iphone.png" alt = "iphone">
+			<img id = "android" src= "images/badge-android.png" alt = "android">
+			</div>
+		</div>
 			
-		</aside>
-
+		</div>
+	</div>
 	</div>
 
 </body>
