positioning tweeks and text allignments, changed button html/css

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 <body>
 	<div class = "container">
 	<!--Create top and bottom background sections-->
-		<section class = "top"> hi!</section>
+		<section class = "top"></section>
 
-		<section class = "bottom">hi!</section>
+		<section class = "bottom"></section>
 	<div class= "main">
 		<img class = "phones" src = "images/phones.png" alt = "iphone & Android">
 
 		<div class = "rightBlock">
 		<img class = "banner" src= "images/brand.png" alt= "Instagram banner">
-		<button id = "logIn"><img src="images/home.png" alt = hm>Log in</button>
+		<button id = "logIn" type="button"><img id="house" src="images/home.png" alt = hm>Log in</button>
 		<div class = "whiteBox">
 			<h1>Capture and Share the World's Moments</h1>
 			<h3>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your 	life with friends and family<br><br>Mixtape kale chips photo booth iPhone, retro portland butcher pork belly knausgaard meditation bitters. Kale chips raclette organic, art party viral raw denim unicorn schlitz polaroid literally fap street art. Cray tbh keffiyeh, sartorial forage viral occupy vexillologist. Tumeric williamsburg occupy, authentic shabby chic locavore unicorn food truck.<br><br>Photo booth schlitz you probably haven't heard of them beard quinoa cornhole.</h3>
 			<div class="appleGoogle">
-			<img id = "iphone" src="images/badge-iphone.png" alt = "iphone">
-			<img id = "android" src= "images/badge-android.png" alt = "android">
+			<button id = "iphone" type="button"></button>
+			<button id = "android" type="button"></button>
 			</div>
 		</div>
 			
