font change(guess) and color and spacing changes. left black border on whitebox sor working purposes (remove). still need to move main section to overlapS1/S2

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		<img class = "banner" src= "images/brand.png" alt= "Instagram banner">
 		<button id = "logIn" type="button"><img id="house" src="images/home.png" alt = hm>Log in</button>
 		<div class = "whiteBox">
-			<h1>Capture and Share the World's Moments</h1>
-			<h3>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your 	life with friends and family<br><br>Mixtape kale chips photo booth iPhone, retro portland butcher pork belly knausgaard meditation bitters. Kale chips raclette organic, art party viral raw denim unicorn schlitz polaroid literally fap street art. Cray tbh keffiyeh, sartorial forage viral occupy vexillologist. Tumeric williamsburg occupy, authentic shabby chic locavore unicorn food truck.<br><br>Photo booth schlitz you probably haven't heard of them beard quinoa cornhole.</h3>
+			<h2>Capture and Share the World's Moments</h2>
+			<h3>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your 	life with friends and family<br><br>Mixtape kale chips photo booth iPhone, retro portland butcher pork belly knausgaard meditation bitters. Kale chips raclette organic, art party viral raw denim unicorn schlitz polaroid literally fap street art. Cray tbh keffiyeh, sartorial forage viral occupy vexillologist. <br><br>Photo booth schlitz you probably haven't heard of them beard quinoa cornhole.</h3>
 			<div class="appleGoogle">
 			<button id = "iphone" type="button"></button>
 			<button id = "android" type="button"></button>
@@ -43,7 +43,7 @@
 	<a href = "#">JOBS</a>
 	<a href = "#">PRIVACY</a>
 	<a href = "#">TERMS</a>
-	<p id= "copyTag">&copy; INSTAGRAM</p>
+	<p id= "copyTag">&copy; 2014 INSTAGRAM</p>
 	</div>
 </footer>
 </html>
