--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 	<a href = "#"></a><!DOCTYPE html>
 <html>
 <head>
+	<!--makes sure contant lands centered and appropriate for display dimensions-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--link to external stylesheet to normalize defaults-->
 	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<!--link to external  css stylesheet-->
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!---just to note understanding: abbrev. title text from tab of image-->
-	<title>ZjyF...</title>
+	<title>ZjyF...(instagram reference)</title>
 </head>
 <body>
 	<div class = "container">
@@ -13,15 +16,18 @@
 		<section class = "top"></section>
 
 		<section class = "bottom"></section>
+	<!--make middle content section to overlap top and bottom -->
 	<div class= "main">
 		<img class = "phones" src = "images/phones.png" alt = "iphone & Android">
-
+		<!-- division for right content-->
 		<div class = "rightBlock">
 		<img class = "banner" src= "images/brand.png" alt= "Instagram banner">
 		<button id = "logIn" type="button"><img id="house" src="images/home.png" alt = hm>Log in</button>
+		<!--division for white box section-->
 		<div class = "whiteBox">
 			<h2>Capture and Share the World's Moments</h2>
 			<h3>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your 	life with friends and family<br><br>Mixtape kale chips photo booth iPhone, retro portland butcher pork belly knausgaard meditation bitters. Kale chips raclette organic, art party viral raw denim unicorn schlitz polaroid literally fap street art. Cray tbh keffiyeh, sartorial forage viral occupy vexillologist. <br><br>Photo booth schlitz you probably haven't heard of them beard quinoa cornhole.</h3>
+			<!--division for button content-->
 			<div class="appleGoogle">
 			<button id = "iphone" type="button"></button>
 			<button id = "android" type="button"></button>
@@ -33,6 +39,7 @@
 	</div>
 
 </body>
+<!-- destination URL would replace hashtag -->
 <footer>
 	<div class = "infoLinks">
 	<a href = "#">ABOUT US</a>
