main section positioning works but white box position is off

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<img class = "phones" src = "images/phones.png" alt = "iphone & Android">
 		<!-- division for right content-->
 		<div class = "rightBlock">
-		<img class = "banner" src= "images/brand.png" alt= "Instagram banner">
+		<img id = "banner" src= "images/brand.png" alt= "Instagram banner">
 		<button id = "logIn" type="button"><img id="house" src="images/home.png" alt = hm>Log in</button>
 		<!--division for white box section-->
 		<div class = "whiteBox">
