full screen view is getting close.Need to solve .whitebox dimension problems

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<!--division for white box section-->
 		<div class = "whiteBox">
 			<h2>Capture and Share the World's Moments</h2>
-			<h3>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your 	life with friends and family<br><br>Mixtape kale chips photo booth iPhone, retro portland butcher pork belly knausgaard meditation bitters. Kale chips raclette organic, art party viral raw denim unicorn schlitz polaroid literally fap street art. Cray tbh keffiyeh, sartorial forage viral occupy vexillologist. <br><br>Photo booth schlitz you probably haven't heard of them beard quinoa cornhole.</h3>
+			<h3>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your 	life with friends and family<br><br>Mixtape kale chips photo booth iPhone, retro portland butcher pork belly knausgaard meditation bitters. <br><br>Photo booth schlitz you probably haven't heard of them beard quinoa cornhole.</h3>
 			<!--division for button content-->
 			<div class="appleGoogle">
 			<button id = "iphone" type="button"></button>
